--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/lodash": "^4.14.104",
+    "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "d3": "^4.13.0",
+    "firebase": "^4.11.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.5",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
