--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "firebase": "^4.11.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.5",
+    "mat-color-picker": "^1.4.3",
+    "material-community-components": "^2.5.7",
     "ng2-validation": "^4.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
