--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@types/lodash": "^4.14.105",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "d3": "^4.13.0",
+    "file-saver": "^1.3.4",
     "firebase": "^4.11.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.5",
@@ -40,8 +40,10 @@
     "@angular/cli": "~1.7.2",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/file-saver": "^1.3.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/lodash": "^4.14.105",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
